Bug 64957 - EDITING: letters move around during editing/typing
Summary: EDITING: letters move around during editing/typing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
4.1.0.0.beta1
Hardware: Other macOS (All)
: highest normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.3.0 target:4.2.2
Keywords: regression
: 48402 71808 72873 73028 74545 76043 (view as bug list)
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-05-24 14:37 UTC by Thomas van der Meulen [retired]
Modified: 2015-05-11 06:05 UTC (History)
17 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Example of font metric issues in Writer Web Layout on OS X (25.80 KB, image/png)
2014-02-15 06:48 UTC, PT
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas van der Meulen [retired] 2013-05-24 14:37:07 UTC
Problem description:  Wen I type in writer all letters move back and forve. this is very disstracting and anoying.

Steps to reproduce:
1. open writer
2. start typing
3. ....

Current behavior: alle letters move around

Expected behavior:the stand still

video: http://youtu.be/y9ozJODeVP0:
build id: Version: 4.1.0.0.beta1
Build ID: 3a2c2d2417101e45fe07cfd8358acf2204a98f3 
I also had a new fresh user-profile. 

            
Operating System: Mac OS X
Version: 4.1.0.0.alpha1
Last worked in: 4.0.3.3 release
Comment 1 Jorendc 2013-05-24 14:45:31 UTC
Thanks Thomas!

As I said in IRC, I can reproduce this behavior using Mac OSX 10.8.3 with LibreOffice 43c234b0481fe63b8c4823affad066c6362f506.
I don't have this behavior using LibreOffice 4.0.3.3, so that's definitely a regression.

I saw already some related/same bugs passing by regarding this issue, but they are reported against older versions of LibreOffice. This is a regression, so lets report it separately and as such.

Due the fact this is a regression and is !very! annoying and is a *core* feature (writing is a core feature in writer, right ;-)?) I mark this as Critical Medium. 

Kind regards,
Joren
Comment 2 Thomas van der Meulen [retired] 2013-05-26 08:04:49 UTC
changed the versuon to beta 1 because it wasn't there wen I reported it.
Comment 3 Michael Meeks 2013-05-28 12:30:19 UTC
Hi guys - any thoughts on this one ? :-) seems we still have some jitter.

Thomas - can you report the font you're using, and also the text you're entering ? is it a Latin text ?

Thanks !
Comment 4 Thomas van der Meulen [retired] 2013-05-28 13:19:49 UTC
hello, the text that i was entering was just some Dutch words typed on a qwerty keyboard the font i used was times new roman. 

I have done some test and came to these conclusion: 
1.the text moves at all zoom levels. 
2.the text moes at all fonds 
3.the text moes at all fonds zises
4.the text only moves on the line that you are typing on line 1  and you pres enter/ or sencee it to long --> and  type on line 2 only to will move and 1 stand still. 

5.if you press TAB only the text that you type after that will move. 
6.if you change the language of the spell checker on one line only the new text will move and the text in the "old" language will stand still on that line. 

if you have any more quistions, just ask them :)
Comment 5 Don't use this account, use tml@iki.fi 2013-05-29 07:46:10 UTC
"critical"? seriously?
Comment 6 Jorendc 2013-05-29 09:16:31 UTC
(In reply to comment #5)
> "critical"? seriously?

Euhm ... yes, I'm really serious about that. But anyway, looking at Khaled's comment on IRC this night, and now your comment you both disagree with this. It's a pity developers don't see the critical part in all of this, but again ... this is probably 'me'.

This bug is already reported a couple of times, but then I wasn't able to confirm it, except if you zoom in/out really hard, and even then it wasn't that big deal. Now I, and others, can confirm this _is_ reproducible (and no, in the mean time I didn't buy another Mac, so same platform), I am convinced this is now reproducible for all Mac users. Even on zoom level 100% I can reproduce this wiggling and it is highly annoying me that much I'm not going to upgrade until this is solved. This is _not_ reproducible using a 4.0.x version, thus a regression, that generally deserves a higher priority then others. And because I'm still convinced typing is a core feature of our Writer component, I'm marking this bug as such. No, it isn't broken as in 'borked', but I hope you can convince others to use LibreOffice Writer daily and see letters wiggle all time. I'm seeing this as a bug that result in quiting users and many more bug reports, not a bug that is going about 'my border of my proprietary extension file is to big, it shows like it is 0,4 but it has to be 0,45'...

Due the fact I *highly* respect both of you, and other developers, I'll lower it to major, medium. Which I think is still to low, but yeah ... who am I in this prioritizing process nowadays? I'm aware of the fact Khaled is doing !great job!, and he told me already this is related to the 'Core Text'-changes. But I don't think "we are working on it" may reflect on the priority of things.

I hope I didn't step on toes, if so: I am really sorry about that. But it is sad I have to argument it that hard to prioritize a bug 'critical'.
Comment 7 Michael Meeks 2013-06-03 19:16:43 UTC
Khaled merged some code from hdu that should fix this for Beta 2 - or at least, move the problems somewhere else that is more interesting on the Mac.

Testing of Beta2 - or a recent Mac snapshot build much appreciated.
Comment 8 Emir Sarı 2013-06-20 13:33:01 UTC
This problem is still present on comments section. 

Shall I open a new bug report for that, or reopen this one?
Comment 9 Michael Meeks 2013-06-20 13:51:44 UTC
If you could file another issue, "see also" this one, and mark it as blocks: mab4.1 - that would be great :-)

When you say comments section - you mean writer comments rendered in boxes to the right of the page somehow ?
Comment 10 Emir Sarı 2013-06-20 14:09:53 UTC
@Michael, yes, exactly. But problem is present on all comments section throughout all LO components.
Comment 11 Ahmad Harthi 2013-06-20 16:57:52 UTC
(In reply to comment #10)
> @Michael, yes, exactly. But problem is present on all comments section
> throughout all LO components.

could you please see if it's present in 4.0.x also?
Comment 12 Emir Sarı 2013-06-20 16:59:50 UTC
(In reply to comment #11)
> (In reply to comment #10)
> > @Michael, yes, exactly. But problem is present on all comments section
> > throughout all LO components.
> 
> could you please see if it's present in 4.0.x also?

No, this has been introduced with 4.1.
Comment 13 Emir Sarı 2013-07-22 14:01:36 UTC
I can reproduce this bug with Calc, and text boxes in Draw. 

Reopening.
Comment 14 CFraser 2013-07-31 22:49:45 UTC
(In reply to comment #6)
> (In reply to comment #5)
> > "critical"? seriously?
> 
> Euhm ... yes, I'm really serious about that. But anyway, looking at Khaled's
> ...

I just signed up to report what I believe is the same bug... critical, yes, basically it is unusable in its current form.

I have reverted back to 4.0.4.

Basically not only does the text 'move around', but when you click to insert, the cursor is positioned in one place, but the text starts typing in another place several characters off.

So you can't actually use it practically... I tried for 10 minutes, but basically you don't know where the text is going to start typing unless you start typing on a new line, hence I have reverted to 4.0.4.

As mentioned in other comments, the problem is also in Calc, and seems more reproducible in calc. I can start a new spreadsheet, type a few words and before long the cursor is in completely the wrong position.

Anything I can do to help, let me know (more in the testing/triage area).

So I take it I should not open a new bug for this, and not for Calc either?

Thanks
Comment 15 Emir Sarı 2013-08-01 05:38:40 UTC
@CFraser, this bug should be sufficient. 

@Khaled, if you have some time could you take a look at this please? Anyway, I should have tested this with Calc before, but if you could take a look at this, since this is a serious issue, that would be great.
Comment 16 خالد حسني 2013-08-01 07:51:04 UTC
There is a patch on gerrit (https://gerrit.libreoffice.org/5023) that fixes some of those issues but it 1) needs more testing 2) introduces other bugs of its own. I don’t have time to work on this at the moment.
Comment 17 Emir Sarı 2013-08-16 10:33:31 UTC
This issue is also present on the HTML View on Writer. Also cursor follows the text around four chars ahead of the text itself.
Comment 18 Bernard Mendiburu 2013-09-05 11:31:32 UTC
Hi there,
New member, first post, loooooong time user, all the way back to corel/star

I do confirm the bug is not fixed on mac.
Basically, the cursor "sprite" is not where at the correct position

Here's a detailed description of the behavior:
The bug occurs in "Web Layout" Mode.
No problem in "Print Layout".
Switching layouts activates/disactivates the bug.

Yes, this bug was present at some point, versions 2.xx AFAIK, and get fixed.
Yes, this is an abosolute NO_GO for mac users

Versions 4.0.x seems OK
Versions 4.1.0.4 still Buggy

Regards
(for the records, OsX 10.6.8)
Comment 19 Bernard Mendiburu 2013-09-05 13:42:13 UTC
Update: Bug still present in 4.1.1.2
Build ID: 7e4286b58adc75a14f6d83f53a03b6c11fa2903

Seems less problematic, yet definitively present.
Shift is about 1/2 to 1 char by the end of a line of text.
Still in Web Layout
Comment 20 Tor Lillqvist 2013-09-05 15:26:05 UTC
So what is it with Mac users that they HAVE TO use the "web layout" then? Have you  done a representative poll, and everybody says they use "web layout" all the time?
Comment 21 Glen Turner 2013-09-19 04:22:56 UTC
#20> ...that they HAVE TO use the "web layout" then?

The issue also exists in Calc when entering text into cells. That alone is a major fault.

Arc up Calc on a Mac, type some text into a cell, and try to edit a typo more than a few words back.
Comment 22 Sleeping 2013-10-04 10:46:39 UTC
Is the bug still present in Writer or just in Calc? Hope it will be fixed soon. I'm upgrading to 4.1 only when it will be fixed as seems quite severe for me... 4.1.2 is out and the bug is still there. Any news?
Comment 23 David G 2013-10-15 18:36:41 UTC
Just upgraded to v. 4.1.2.3 and am working with a document in writer and am having the issue with the annoying characters-moving around, jiggling, as I type. Also, the insertion point (as shown by the cursor location) does not match up with where one clicks on the screen--it's close, about 1 character off, but that closeness is not very acceptable.

Am using Mac 10.8.5, Writer, and am in the Print Layout View, (the issues are worse in the web layout view). The issue is present with Times Roman and not present with Arial. I've switched fonts and am willing to do this but, I'd be a bit embarrassed to present LibreOffice to a friend for the first time, and me having to explain away the annoying wiggling text/ misalignment of curser/ insertion point.

Thanks for your work!
David
Comment 24 Yury 2013-11-27 20:11:44 UTC
I can reproduce horizontal jitter of glyphs on linux with Writer 3.6.7.2. However, not reliably. I was experiencing this just now with ODT document which in 135% zoom takes two "screens" (which need to be switched/scrolled with, e.g., arrow up/down). For several minutes just now Writer was reliably showing its output after scroll ("screen" change") and then "correcting" it in horizontal direction (glyphs outlines subtly changing). This effect was quite noticeable, but now it's gone (or just barely visible). Possibly system load might be of relevance (for noticeability)?
Comment 25 Kohei Yoshida 2014-01-10 04:18:23 UTC
Wrong component.
Comment 26 PT 2014-02-01 05:07:23 UTC
I have just confirmed that this bug is still present in Version 4.2.0.2, under Mac OS X 10.9.1.

Specifically, in Writer, when in "Web Layout" view, at all zoom levels, the letters jump around during editing and the cursor is mis-positioned. The cursor being mis-positioned seems also to lead to some stray parts of letters being positioned in the wrong place during editing. I don't think it depends on the font: I've seen the same behaviour with all three that I've tried (Calibri, Arial, Avenir Next).

This bug makes Writer unusable for editing in the non-paginated "Web Layout" view. In "Print Layout" view, the problem doesn't seem to arise. I haven't tested the other components.

I believe this should be categorised as a "Most Annoying Bug" in 4.2.x. It does not occur in the 4.0.x series.
Comment 27 retired 2014-02-01 08:36:08 UTC
NoRepro:4.2.0.4:OSX

Worksforme. Is this bug still valid / reproducible with the latest LO release?  Currently 4.2.0.4: http://www.libreoffice.org/download/

Please also try resetting your user profile and let us know if that helps: https://wiki.documentfoundation.org/UserProfile

Should this be still reproducible for you with the latest LO release please set this bug back to REOPENED.

This is already MAB 4.1 and that is where it belongs, since that is the first version this problem appeared in and which is still under development, so all fine with that :)
Comment 28 PT 2014-02-01 08:49:31 UTC
Apologies. I mistyped the version in my last comment. It was 4.2.0.4, i.e. the latest release.

To reproduce, with a new user profile, on OS X:

1. Launch LibreOffice.
2. Create a new writer document.
3. Select View->Web Layout.
4. Type a few words (to observe letters moving).
5. Attempt to edit, positioning the cursor using the mouse (to observe cursor mis-placement).
Comment 29 retired 2014-02-01 08:57:47 UTC
Hm, as I said, works here. Is this happening with all fonts? So you already tried resetting your userprofile?
Comment 30 PT 2014-02-01 09:43:25 UTC
Yes, I did that for my last comment, as you suggested. It's happening with every font I have tried. In the steps I just set out, it was the default font for the default template: Liberation Serif.

I have just tried it on another system, running OS X 10.8.5, and seen the same result. 

Are you sure you're testing in Web Layout mode? If so, please can you describe your system? Maybe there's some obvious difference in the environment. (I don't have a system with a HiDPI/"Retina" display to test with, but it strikes me that could make a difference, as I imagine OS X's font rendering is done rather differently in that case.)
Comment 31 Jean-Baptiste Faure 2014-02-05 05:24:54 UTC
*** Bug 74545 has been marked as a duplicate of this bug. ***
Comment 32 sophie 2014-02-12 09:44:43 UTC
Changed importance to reflect the new policy - Sophie
Comment 33 retired 2014-02-12 10:05:46 UTC
PT: just to gather some more data points trying to narrow this down.

10.9.1 here, no retina display and yes, webview. So while this doesn't provide help narrowing down it maybe helps showing that this issue might be machine dependent. Not sure how our systems differ though.
Comment 34 خالد حسني 2014-02-12 10:13:49 UTC
The root of this issue is known, we just need developers instreasted in Mac development to work on this and other Mac-pecific issues.
Comment 35 PT 2014-02-15 06:48:18 UTC
Created attachment 94110 [details]
Example of font metric issues in Writer Web Layout on OS X

This shows the issue on OS X in Writer's Web Layout view. The text is Liberation Serif 12pt, at 100% zoom on a retina display. Similar issues seem to arise in most other fonts, except for mono-spaced ones. Non-printing characters are turned on, as it makes the editing problem evident: in web view, the text is rendered differently, but the coordinates used for the placement of the paragraph mark remain the same as in Print Layout. Cursor positioning uses the latter layout, which makes editing very frustrating.
Comment 36 PT 2014-02-15 06:56:47 UTC
(In reply to comment #33)
Foss: I've just tried it on a new machine: a 13" Retina MacBook Pro, which has never had any version of LO installed except 4.2.0.4, with the results shown in the attachment to comment 35 (as well as the letters moving around slightly).

The "show non-printing characters" approach seems to show the problem clearly, without relying on attempting to edit. Have you tried a few different fonts? The scale and direction of the cursor-positioning error seems to depend on the font metrics. Hence the 'iiiii' in my example -- it exaggerates the effect.
Comment 37 rockonjo 2014-02-24 21:17:51 UTC
Confirmed on 4.2.1.1 (OSX)
Comment 38 Commit Notification 2014-02-26 11:47:41 UTC
Herbert Dürr committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3edcdd43f94e605c08314ab61f64c418b01f8dde

fdo#64957: #i124233# prevent the accumulation of rounding errors



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 39 Commit Notification 2014-02-26 12:08:57 UTC
Herbert Dürr committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eb35d71c2cb46d066b42be49b7749d96a647b50f&h=libreoffice-4-2

fdo#64957: #i124233# prevent the accumulation of rounding errors


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 40 Commit Notification 2014-02-26 15:18:31 UTC
Herbert Dürr committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ac7062d7fb6e5dfe0f81d53daec7f088dc4f9e3d&h=libreoffice-4-2-2

fdo#64957: #i124233# prevent the accumulation of rounding errors


It will be available already in LibreOffice 4.2.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 41 Adolfo Jayme Barrientos 2014-02-26 22:54:28 UTC
*** Bug 71808 has been marked as a duplicate of this bug. ***
Comment 42 Theseus 2014-03-01 20:04:56 UTC
Hi, I had the same problem—in both Calc and Writer (when in Web Layout), OS X with 4.2.1.1.

I can confirm, the problem has been fixed on 4.2.3 Beta for Calc and Writer. It looks and works great so far!
Comment 43 Adolfo Jayme Barrientos 2014-03-12 06:49:20 UTC
*** Bug 76043 has been marked as a duplicate of this bug. ***
Comment 44 Thomas van der Meulen [retired] 2014-03-23 12:40:19 UTC
*** Bug 72873 has been marked as a duplicate of this bug. ***
Comment 45 Adolfo Jayme Barrientos 2014-09-01 04:30:17 UTC
*** Bug 73028 has been marked as a duplicate of this bug. ***
Comment 46 Adolfo Jayme Barrientos 2015-05-11 06:05:57 UTC
*** Bug 48402 has been marked as a duplicate of this bug. ***