fdo#64957: #i124233# prevent the accumulation of rounding errors

in CTLayout::FillDXArry()

Change-Id: I8ee83068d71275874e4af364df253251dfb41c8c